Add assert initialized method in URLBuilder